# python_ai_server

./: GEMINI.md  README.md  mcp_proxy.md  pyproject.toml  sotre_count_mcp.py  sql_mcp_sse.py
auto_gen/: 0.先看這邊.md  Readme.md  __init__.py  agent_group.py  auto_gen_jira.py  code_review_auto_gen.py  gemini_agents_enhanced.py  install_enhanced.sh  ollama_auto_gen.py  xai_use_mcp.py
gen_code_gemini/: 0.先看這邊.md  README_ENHANCED.md  __init__.py  enhanced_examples.py  gemini_agents_enhanced.py  install_enhanced.bat  pyproject.toml
gen_code_xai/: .env.example  0.先看這邊.md  README.md  README_使用指南.md  advanced_config.py  code_generation_evaluation.py  enhanced_code_generation_evaluation.py  examples.py  requirements.txt
langchain_demo/: group_graph_chats.py  mcp_demo.py  multi_mcp.py  multi_mcp_bind_rag.py  rag_api.py  redis_arg.py  redis_rag.py  story.txt  tech_doc.txt
mcp_demo/: exchange_rate_mcp_sse.py  mcp_proxy.md  sotre_count_mcp.py  sql_mcp_sse.py  sql_mcp_sse_README.md  store_count_mcp.py
