[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-code-agents"
version = "0.1.0"
description = "AutoGen code generation and optimization system that uses agent collaboration for code improvement"
readme = "README.md"
authors = [
    {name = "Your Name"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ag2==0.2.19",
    "google-generativeai==0.7.1",
    "pandas",
    "matplotlib",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8"
]

[tool.hatch.build.targets.wheel]
packages = ["auto_gen"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist"]
